tests/fixtures/fail/generic_nominal_recursive_layout.sc
let Invalid (T: type) = struct { next: Invalid(T) }

let main(): i32 = { 42 }
